# ai-bot-predictions

./: .env  check_termux_files.sh  clean_local.sh  execute_trades.sh  fetch_prediction.sh  fetch_predictions.sh  git_push.sh  kraken_api.json  loop_executor.sh  orchestrator.py  prediction.json  predictions.json  pull_and_predict.sh  pull_predictions.sh  run_bot.sh  schedule_push.sh  trade_executor.py  trade_log.csv
_trash/: CMakeLists.txt  __dir_list.txt  cleaned_dataset.csv  execute_trades.py  fetch_log.txt  fetch_prediction.sh  fix_all.sh  fix_all_clean.sh  fix_final.sh  fix_permissions.sh  fix_shebangs.sh  full_retrain.py  log_prediction.py  main.cpp  predict.py  predict_crontab.txt  predictions_2025-05-09T22-47-09.780656.txt  pull_and_predict.py  retrain_colab.sh  reviewed_dataset_with_predictions.csv  run_predict_cron.sh  send_dashboard.py  trade_data.csv  trade_outcome_model.onnx
_trash/ai/: .model_hash  ai_manager.py  cron_fetch.sh  fetch_latest_model.sh  onnx_predictor.py  predict_outcome.py  push_input_to_colab.sh  push_prediction_result.sh  retrain_model.py  sync_model_and_prediction.sh  test_model_run.py  trade_outcome_model.pkl  watch_and_restart.sh
_trash/bot/: clean_dataset.py  cleaned_dataset.csv  main.py  review.py  reviewed_dataset.csv  train_model.py
_trash/predict/: predict.py
config/: chat_id.txt
data/: predictions.json  trade_input.json  trade_predictions.json
logs/: balance.json  training_dataset.csv
model/: trade_outcome_model.onnx
tools/: full_retrain.sh  notify_telegram.py  push_cleaned_dataset.sh  sync_cleaned_dataset.sh  (+1 more)
(+1 files in other folders)
